--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "lint": "^0.7.0",
     "mongoose": "^6.6.0",
     "next": "12.3.0",
     "react": "18.2.0",
